<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.SignUpFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/sign_up"
        android:textColor="@color/gold"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:padding="5dp"
            app:boxCornerRadiusBottomStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:padding="14dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusTopEnd="20dp"
            android:layout_marginVertical="20dp"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:padding="5dp"
            app:boxCornerRadiusBottomStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:padding="5dp"
            app:boxCornerRadiusBottomStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/c_password_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:padding="14dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/sign_up_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/sign_up_bt"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:enabled="false"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_loading"
        app:cornerRadius="20dp"
        android:layout_marginHorizontal="80dp"
        android:text="@string/sign_up"
        android:textColor="@color/gold"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_bt"
        android:text="@string/already_have_an_account"
        android:textSize= "16sp"
        android:textColor="@color/text_color"
        android:layout_marginVertical="18dp"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_tx_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/already"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/sign_up_bt"
        android:text="@string/login"
        android:clickable="true"
        android:textSize= "16sp"
        android:textColor="@color/gold"
        android:layout_marginVertical="18dp"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>