<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vhytron.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_login"
            app:destination="@id/login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_nav_home_to_chat_screen"
            app:destination="@id/chat_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vhytron.ui.chats.ChatsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_charts" >
        <action
            android:id="@+id/action_nav_gallery_to_chat_screen"
            app:destination="@id/chat_screen"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument android:name="chats"
            app:argType="com.vhytron.ui.chats.PeopleModel"/>
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vhytron.ui.todos.TodosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_todos" />

    <fragment
        android:id="@+id/sign_up"
        android:name="com.vhytron.ui.authentication.SignUpFragment"
        tools:layout="@layout/fragment_sign_up"
        android:label="@string/sign_up">
        <action
            android:id="@+id/action_sign_up_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@animator/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popUpTo="@id/sign_up"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_sign_up_to_login"
            app:destination="@id/login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/login"
        android:name="com.vhytron.ui.authentication.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/login"
            app:popUpToInclusive="true"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_login_to_sign_up"
            app:destination="@id/sign_up"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@animator/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/chat_screen"
        android:name="com.vhytron.ui.chats.ChatScreenFragment"
        android:label="Chats"
        tools:layout="@layout/fragment_chat_screen"/>
</navigation>